tests/generated/070_iriencode.out
Fatal error: Call to undefined method DtlIter::iriencode() in /home/rune/workspace/php-misc/php-dtl-iterator/tests/django-generated/070_iriencode.php on line 4